crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__pho-groupings.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "fra"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "fra"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;06.",
        "corpus": "corpus",
        "language": [
          "fra"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "fra"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Phonological tier with pho group delimiters and complex groupings",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: pho_groups with grouping brackets",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              [
                "a",
                "b"
              ],
              "c",
              [
                "d",
                "e"
              ],
              "f",
              "g"
            ],
            "tier_type": "Pho"
          },
          "type": "Pho"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "A",
              "content": [
                {
                  "content": "A",
                  "type": "text"
                }
              ],
              "raw_text": "A",
              "type": "word"
            },
            {
              "cleaned_text": "B",
              "content": [
                {
                  "content": "B",
                  "type": "text"
                }
              ],
              "raw_text": "B",
              "type": "word"
            },
            {
              "cleaned_text": "C",
              "content": [
                {
                  "content": "C",
                  "type": "text"
                }
              ],
              "raw_text": "C",
              "type": "word"
            },
            {
              "cleaned_text": "D",
              "content": [
                {
                  "content": "D",
                  "type": "text"
                }
              ],
              "raw_text": "D",
              "type": "word"
            },
            {
              "cleaned_text": "E",
              "content": [
                {
                  "content": "E",
                  "type": "text"
                }
              ],
              "raw_text": "E",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;06.",
        "corpus": "corpus",
        "language": [
          "fra"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "fra"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
