crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__pho-mod-order.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "fra"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Léonard",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": null,
            "role": "Father",
            "speaker_code": "FAT"
          },
          {
            "name": null,
            "role": "Friend",
            "speaker_code": "PAT"
          },
          {
            "name": "Aliyah",
            "role": "Speaker",
            "speaker_code": "OBS"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.09",
        "corpus": "Paris-Corpus_Leonard",
        "group": "bi",
        "language": "fra",
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "Paris-Corpus_Leonard",
        "language": "fra",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "Paris-Corpus_Leonard",
        "language": "fra",
        "role": "Father",
        "speaker": "FAT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "Paris-Corpus_Leonard",
        "language": "fra",
        "role": "Friend",
        "speaker": "PAT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "Paris-Corpus_Leonard",
        "language": "fra",
        "role": "Speaker",
        "speaker": "OBS",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "15-OCT-1990",
        "participant": "CHI",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "pho-mod-order",
        "media_type": "video",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "23-JUN-1992",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Test %mod and %pho order.",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              "ɔ"
            ],
            "tier_type": "Mod"
          },
          "type": "Mod"
        },
        {
          "data": {
            "items": [
              "oː"
            ],
            "tier_type": "Pho"
          },
          "type": "Pho"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 12286,
            "start_ms": 0
          },
          "content": [
            {
              "content": [
                {
                  "content": "oh",
                  "type": "text"
                }
              ],
              "raw_text": "oh",
              "span": {
                "end": 506,
                "start": 504
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "exclamation"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": "15-OCT-1990",
      "code": "CHI",
      "id": {
        "age": "1;08.09",
        "corpus": "Paris-Corpus_Leonard",
        "group": "bi",
        "language": "fra",
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI"
      },
      "name": "Léonard",
      "role": "Target_Child"
    },
    "FAT": {
      "birth_date": null,
      "code": "FAT",
      "id": {
        "corpus": "Paris-Corpus_Leonard",
        "language": "fra",
        "role": "Father",
        "speaker": "FAT"
      },
      "name": null,
      "role": "Father"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "Paris-Corpus_Leonard",
        "language": "fra",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    },
    "OBS": {
      "birth_date": null,
      "code": "OBS",
      "id": {
        "corpus": "Paris-Corpus_Leonard",
        "language": "fra",
        "role": "Speaker",
        "speaker": "OBS"
      },
      "name": "Aliyah",
      "role": "Speaker"
    },
    "PAT": {
      "birth_date": null,
      "code": "PAT",
      "id": {
        "corpus": "Paris-Corpus_Leonard",
        "language": "fra",
        "role": "Friend",
        "speaker": "PAT"
      },
      "name": null,
      "role": "Friend"
    }
  }
}
