crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__pho-mod.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "ind",
          "jav"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Ido",
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "4;05.21",
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "23-JUN-2000",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Test new pho with mod",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              "d",
              "e",
              "f"
            ],
            "tier_type": "Mod"
          },
          "type": "Mod"
        },
        {
          "data": {
            "items": [
              "a",
              "b",
              "c"
            ],
            "tier_type": "Pho"
          },
          "type": "Pho"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "A",
                  "type": "text"
                }
              ],
              "raw_text": "A",
              "span": {
                "end": 181,
                "start": 180
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "B",
                  "type": "text"
                }
              ],
              "raw_text": "B",
              "span": {
                "end": 183,
                "start": 182
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "C",
                  "type": "text"
                }
              ],
              "raw_text": "C",
              "span": {
                "end": 185,
                "start": 184
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "4;05.21",
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI"
      },
      "name": "Ido",
      "role": "Target_Child"
    }
  }
}
