crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__pho-pause.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "pause align 1-1 to pho",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              "modword"
            ],
            "tier_type": "Mod"
          },
          "type": "Mod"
        },
        {
          "data": {
            "items": [
              "phoword"
            ],
            "tier_type": "Pho"
          },
          "type": "Pho"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "duration": {
                "type": "long"
              },
              "type": "pause"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
