crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__pho-stuff.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "ind",
          "jav"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Ido",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Rimi",
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": "Bety",
            "role": "Investigator",
            "speaker_code": "EXP"
          },
          {
            "name": "Praba",
            "role": "Brother",
            "speaker_code": "ABA"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "4;05.21",
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Mother",
        "sex": "female",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "25;01.14",
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Investigator",
        "sex": "female",
        "speaker": "EXP",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "5;07.22",
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Brother",
        "sex": "male",
        "speaker": "ABA",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "01-JAN-1996",
        "participant": "CHI",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "31-OCT-1994",
        "participant": "ABA",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "23-JUN-2000",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": "ʔə˜tar tantəŋgaʔ mɔ maɛn lagi dɛh",
            "label": "xpho"
          },
          "type": "UserDefined"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "entar",
                  "type": "text"
                }
              ],
              "raw_text": "entar",
              "span": {
                "end": 412,
                "start": 407
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "Tante",
                  "type": "text"
                }
              ],
              "raw_text": "Tante",
              "span": {
                "end": 418,
                "start": 413
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "nggak",
                  "type": "text"
                }
              ],
              "raw_text": "nggak",
              "span": {
                "end": 424,
                "start": 419
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "mo",
                  "type": "text"
                }
              ],
              "raw_text": "mo",
              "span": {
                "end": 427,
                "start": 425
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "maen",
                  "type": "text"
                }
              ],
              "raw_text": "maen",
              "span": {
                "end": 432,
                "start": 428
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "lagi",
                  "type": "text"
                }
              ],
              "raw_text": "lagi",
              "span": {
                "end": 437,
                "start": 433
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "deh",
                  "type": "text"
                }
              ],
              "raw_text": "deh",
              "span": {
                "end": 441,
                "start": 438
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "EXP"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "ABA": {
      "birth_date": "31-OCT-1994",
      "code": "ABA",
      "id": {
        "age": "5;07.22",
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Brother",
        "sex": "male",
        "speaker": "ABA"
      },
      "name": "Praba",
      "role": "Brother"
    },
    "CHI": {
      "birth_date": "01-JAN-1996",
      "code": "CHI",
      "id": {
        "age": "4;05.21",
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI"
      },
      "name": "Ido",
      "role": "Target_Child"
    },
    "EXP": {
      "birth_date": null,
      "code": "EXP",
      "id": {
        "age": "25;01.14",
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Investigator",
        "sex": "female",
        "speaker": "EXP"
      },
      "name": "Bety",
      "role": "Investigator"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Mother",
        "sex": "female",
        "speaker": "MOT"
      },
      "name": "Rimi",
      "role": "Mother"
    }
  }
}
